Fix UI jumps

--- a/src/components/pages/gallery/GalleryPage.module.scss
+++ b/src/components/pages/gallery/GalleryPage.module.scss
@@ -65,6 +65,10 @@
     &.video {
       grid-template-columns: repeat(2, minmax(0, 1fr));
     }
+
+    & > div {
+      height: 288px;
+    }
   }
 
   @include mobile {
